--- a/FrontEnd/Login/signup.html
+++ b/FrontEnd/Login/signup.html
@@ -12,8 +12,8 @@
 <body>
   <div class="login-box">
     <div class="lb-header">
-      <a href="#" class="active" id="login-box-link">Login</a>
-      <a href="signup.html" id="signup-box-link">Sign Up</a>
+      <a href="login.html" id="login-box-link">Login</a>
+      <a href="#" class="active" id="signup-box-link">Sign Up</a>
     </div>
     <div class="social-login">
       <a href="#">
@@ -25,7 +25,7 @@
         log in with Google
       </a>
     </div>
-    <form class="email-login">
+    <form class="email-signup">
       <div class="u-form-group">
         <input type="email" placeholder="Email" />
       </div>
@@ -33,10 +33,10 @@
         <input type="password" placeholder="Password" />
       </div>
       <div class="u-form-group">
-        <button>Log in</button>
+        <input type="password" placeholder="Confirm Password" />
       </div>
       <div class="u-form-group">
-        <a href="#" class="forgot-password">Forgot password?</a>
+        <button>Sign Up</button>
       </div>
     </form>
   </div>
