login sign up modifications

--- a/FrontEnd/Login/login.html
+++ b/FrontEnd/Login/login.html
@@ -18,11 +18,11 @@
     <div class="social-login">
       <a href="#">
         <i class="fa fa-facebook fa-lg"></i>
-        Login in with facebook
+        Login with facebook
       </a>
       <a href="#">
         <i class="fa fa-google-plus fa-lg"></i>
-        log in with Google
+        Login with Google
       </a>
     </div>
     <form class="email-login">
